Mon Nov  07 10:10:14 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be_include/be_global.h:
        * TAO_IDL/be_include/be_util.h:
        Add option -oE: Output directory for the generated CIAO executor files
        and option -oN for not overwrite CIAO executor files.  
         
 

Sat Nov 05 18:18:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3531b_Regression/server.cpp:
          Fixed WChar build problems.

Fri Nov  4 07:28:29 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Extended documentation for ORBWaitStrategy mt_noupcall

Thu Nov 03 09:51:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
        Fixed error in previous commit

Thu Nov 03 08:45:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3531b_Regression/server.cpp:
          Fixed compile warning on Solaris10 build.

Wed Nov 02 13:30:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Put narrow in var, use ACE_NEW  with CIAO_FACET


Wed Nov 02 08:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Tue Nov  1 14:29:07 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
                  Fixed link issues on windows.

        Tue Nov  1 12:52:03 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
                * TAO_IDL/be/be_visitor_component/component_exh.cpp:
                * TAO_IDL/be/be_visitor_component/executor_exh.cpp: