@@ -681,6 +681,21 @@ also receives other options that are specific to it.<p>
     <td>Default is value of -o option or current directory&nbsp;</td>
   </tr>
 
+  <tr><a name="oE">
+    <td><tt>-oE </tt><i>path</i></td>
+
+    <td>Same as -o option but applies only to generated *_exec.* files&nbsp;</td>
+    <td>Default is value of -o option or current directory&nbsp;</td>
+  </tr>
+
+  <tr><a name="oN">
+    <td><tt>-oN </tt><i>path</i></td>
+
+    <td>Do not overwrite *_exec.* files&nbsp;</td>
+    <td>When -Gex option is used, executor implementation files shouldn't be overwritten
+      if they are already in the output directory.&nbsp;</td>
+  </tr>
+
   <tr><a name="hc">
     <td><tt>-hc</tt></td>
 
